include/dss_capi.h

    typedef void (*dss_callback_solution_t)(void* ctx);
    /*! Functions to register and unregister callbacks for the solution events (DSSEvents in COM) */
    DSS_CAPI_DLL uint16_t DSSEvents_RegisterInitControls(dss_callback_solution_t cb);
    DSS_CAPI_DLL uint16_t DSSEvents_RegisterCheckControls(dss_callback_solution_t cb);
    DSS_CAPI_DLL uint16_t DSSEvents_RegisterStepControls(dss_callback_solution_t cb);
    DSS_CAPI_DLL uint16_t DSSEvents_UnregisterInitControls(dss_callback_solution_t cb);
    DSS_CAPI_DLL uint16_t DSSEvents_UnregisterCheckControls(dss_callback_solution_t cb);
    DSS_CAPI_DLL uint16_t DSSEvents_UnregisterStepControls(dss_callback_solution_t cb);
    /*! 
    If enabled, the DOScmd command is allowed. Otherwise, an error is reported if the user tries to use it.
    
    Defaults to False/0 (disabled state). Users should consider DOScmd deprecated on DSS-Extensions.
    
    This can also be set through the environment variable DSS_CAPI_ALLOW_DOSCMD. Setting it to 1 enables
    the command.
    
    (API Extension)
    */
    DSS_CAPI_DLL uint16_t DSS_Get_AllowDOScmd(void);
    DSS_CAPI_DLL void DSS_Set_AllowDOScmd(uint16_t Value);
    /*! 
    Controls some compatibility flags introduced to toggle some behavior from the official OpenDSS.
    The current bit flags are listed in the enum description.

    The flags may change for each version of DSS C-API, but the same value will not be reused. That is,
    when we remove a compatibility flag, it will have no effect but will also not affect anything else
    besides raising an error if the user tries to toggle a flag that was available in a previous version.

    We expect to keep a very limited number of flags. Since the flags are more transient than the other
    options/flags, it was preferred to add this generic function instead of a separate function per
    flag.

    **These flags are global**, affecting any DSS context in the process.

    Related enumeration: DSSCompatFlags

    (API Extension)
    */
    DSS_CAPI_DLL uint32_t DSS_Get_CompatFlags(void);
    DSS_CAPI_DLL void DSS_Set_CompatFlags(uint32_t Value);
    /*! 
    If enabled, in case of errors or empty arrays, the API returns arrays with values compatible with the 
    official OpenDSS COM interface. 
    
    For example, consider the function Loads_Get_ZIPV. If there is no active circuit or active load element:
    - In the disabled state (COMErrorResults=False), the function will return "[]", an array with 0 elements.
    - In the enabled state (COMErrorResults=True), the function will return "[0.0]" instead. This should
      be compatible with the return value of the official COM interface.
    
    Defaults to True/1 (enabled state) in the v0.13.x series. This will change to false in future series.
    
    This can also be set through the environment variable DSS_CAPI_COM_DEFAULTS. Setting it to 0 disables
    the legacy/COM behavior. The value can be toggled through the API at any time.
    
    (API Extension)
    */
    DSS_CAPI_DLL uint16_t DSS_Get_COMErrorResults(void);
    DSS_CAPI_DLL void DSS_Set_COMErrorResults(uint16_t Value);