src/CAPI/CAPI_DSS.pas

    
end;
//------------------------------------------------------------------------------
function DSS_Get_COMErrorResults(): TAPIBoolean; CDECL;
begin
    Result := DSS_CAPI_COM_DEFAULTS;
end;
//------------------------------------------------------------------------------
procedure DSS_Set_COMErrorResults(Value: TAPIBoolean); CDECL;
begin
    DSS_CAPI_COM_DEFAULTS := Value;
end;
//------------------------------------------------------------------------------
function DSS_Get_AllowDOScmd(): TAPIBoolean; CDECL;
begin
    Result := DSS_CAPI_ALLOW_DOSCMD;
end;
//------------------------------------------------------------------------------
procedure DSS_Set_AllowDOScmd(Value: TAPIBoolean); CDECL;
begin
    DSS_CAPI_ALLOW_DOSCMD := Value;
end;
//------------------------------------------------------------------------------
function DSS_Get_CompatFlags(): LongWord; CDECL;
begin
    Result := DSS_EXTENSIONS_COMPAT;
end;
//------------------------------------------------------------------------------
procedure DSS_Set_CompatFlags(Value: LongWord); CDECL;
begin
    DSS_EXTENSIONS_COMPAT := Value;
    SelectAs2pVersion((DSS_EXTENSIONS_COMPAT and ord(TDSSCompatFlags.BadPrecision)) <> 0);
end;
//------------------------------------------------------------------------------
function removeFromArray(var cbs: dss_callbacks_solution_t; target: dss_callback_solution_t): Boolean;
var
    i, j: Integer;
begin
    Result := False;
    for i := 0 to High(cbs) do
    begin
        if @cbs[i] = @target then
        begin
            // Move any other callbacks back and resize
            for j := i + 1 to High(cbs) do
            begin
                cbs[j - 1] := @cbs[j];
            end;
            SetLength(cbs, Length(cbs) - 1);
            Result := True;
            Exit;
        end;
    end;
end;

function appendToArray(var cbs: dss_callbacks_solution_t; target: dss_callback_solution_t): Boolean;
var
    cb: dss_callback_solution_t;
begin
    Result := False;
    for cb in cbs do
    begin
        if @cb = @target then
            Exit; // already added, ignore
    end;
    SetLength(cbs, Length(cbs) + 1);
    cbs[High(cbs)] := @target;
    Result := True;
end;

function DSSEvents_RegisterInitControls(cb: dss_callback_solution_t): TAPIBoolean; CDECL;
begin
    Result := appendToArray(DSSPrime.DSSInitControlsCallbacks, @cb);
end;
function DSSEvents_RegisterCheckControls(cb: dss_callback_solution_t): TAPIBoolean; CDECL;
begin
    Result := appendToArray(DSSPrime.DSSCheckControlsCallbacks, @cb);
end;
function DSSEvents_RegisterStepControls(cb: dss_callback_solution_t): TAPIBoolean; CDECL;
begin
    Result := appendToArray(DSSPrime.DSSStepControlsCallbacks, @cb);
end;
function DSSEvents_UnregisterInitControls(cb: dss_callback_solution_t): TAPIBoolean; CDECL;
begin
    Result := removeFromArray(DSSPrime.DSSInitControlsCallbacks, @cb);
end;
function DSSEvents_UnregisterCheckControls(cb: dss_callback_solution_t): TAPIBoolean; CDECL;
begin
    Result := removeFromArray(DSSPrime.DSSCheckControlsCallbacks, @cb);
end;
function DSSEvents_UnregisterStepControls(cb: dss_callback_solution_t): TAPIBoolean; CDECL;
begin
    Result := removeFromArray(DSSPrime.DSSStepControlsCallbacks, @cb);
end;
//------------------------------------------------------------------------------
end.
